ticket list page done but not showing the list of tickets. Will circle back to find the issue

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ header {
 }
 
 main {
+  margin-top: 20px;
   grid-area: main;
   min-height: 88vh;
 }
